// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepts raw text as a child 1`] = `
<SecondaryButton>
  <GetTheme>
    <ButtonWithText
      activeColor="#F9F9F9"
      defaultColor="#ffffff"
      size="medium"
      textColor="#48484D"
    >
      <BaseButton
        activeColor="#F9F9F9"
        constrainSize={true}
        defaultColor="#ffffff"
        size="medium"
      >
        <TouchableWithoutFeedback
          accessible={true}
          onPressIn={[Function]}
          onPressOut={[Function]}
        >
          <AnimatedComponent
            accessible={true}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "animationDuration": "0.75s",
                "animationIterationCount": "infinite",
                "animationName": Array [
                  Object {
                    "0%": Object {
                      "transform": Array [
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                    },
                    "100%": Object {
                      "transform": Array [
                        Object {
                          "rotate": "360deg",
                        },
                      ],
                    },
                  },
                ],
                "animationTimingFunction": "linear",
                "backgroundColor": "rgba(255, 255, 255, 1)",
                "backgroundSize": "cover",
                "color": "#fff",
                "fontWeight": "500",
                "height": 36,
                "padding": 8,
                "textAlign": "center",
                "textTransform": "uppercase",
                "width": 36,
              }
            }
          >
            <View
              accessible={true}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(255, 255, 255, 1)",
                  "borderRadius": 2,
                  "cursor": "pointer",
                  "height": 40,
                  "justifyContent": "center",
                  "maxWidth": 240,
                  "minWidth": 120,
                  "overflow": "hidden",
                  "touchAction": "manipulate",
                }
              }
            >
              <div
                className="rn-alignItems-1awozwy rn-borderTopLeftRadius-1iymjk7 rn-borderTopRightRadius-s2skl2 rn-borderBottomRightRadius-l5bh9y rn-borderBottomLeftRadius-101sy47 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-cursor-1loqt21 rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-height-eu3ka rn-justifyContent-1777fci rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-maxWidth-1fnot1l rn-minHeight-ifefl9 rn-minWidth-ggk5by rn-overflowX-11yh6sk rn-overflowY-buy8e9 rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim rn-touchAction-1gvxusu rn-zIndex-1lgpqti"
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "backgroundColor": "rgba(255, 255, 255, 1)",
                  }
                }
                tabIndex="0"
              >
                <Text
                  style={
                    Object {
                      "color": "#48484D",
                      "cursor": "pointer",
                      "touchAction": "manipulation",
                    }
                  }
                >
                  <InnerText
                    style={
                      Object {
                        "0": 41,
                        "1": Object {
                          "color": "#48484D",
                        },
                        "2": undefined,
                      }
                    }
                  >
                    <GetTheme>
                      <Text
                        style={
                          Object {
                            "0": 41,
                            "1": Object {
                              "color": "#48484D",
                            },
                            "2": undefined,
                            "color": "#48484D",
                          }
                        }
                      >
                        <div
                          className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1b43r93 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
                          dir="auto"
                          style={
                            Object {
                              "0": "41px",
                              "1": Object {
                                "color": "#48484D",
                              },
                              "color": "rgba(72,72,77,1)",
                            }
                          }
                        >
                          hello
                        </div>
                      </Text>
                    </GetTheme>
                  </InnerText>
                </Text>
              </div>
            </View>
          </AnimatedComponent>
        </TouchableWithoutFeedback>
      </BaseButton>
    </ButtonWithText>
  </GetTheme>
</SecondaryButton>
`;

exports[`renders 1`] = `
<SecondaryButton>
  <GetTheme>
    <ButtonWithText
      activeColor="#F9F9F9"
      defaultColor="#ffffff"
      size="medium"
      textColor="#48484D"
    >
      <BaseButton
        activeColor="#F9F9F9"
        constrainSize={true}
        defaultColor="#ffffff"
        size="medium"
      >
        <TouchableWithoutFeedback
          accessible={true}
          onPressIn={[Function]}
          onPressOut={[Function]}
        >
          <AnimatedComponent
            accessible={true}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "animationDuration": "0.75s",
                "animationIterationCount": "infinite",
                "animationName": Array [
                  Object {
                    "0%": Object {
                      "transform": Array [
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                    },
                    "100%": Object {
                      "transform": Array [
                        Object {
                          "rotate": "360deg",
                        },
                      ],
                    },
                  },
                ],
                "animationTimingFunction": "linear",
                "backgroundColor": "rgba(255, 255, 255, 1)",
                "backgroundSize": "cover",
                "color": "#fff",
                "fontWeight": "500",
                "height": 36,
                "padding": 8,
                "textAlign": "center",
                "textTransform": "uppercase",
                "width": 36,
              }
            }
          >
            <View
              accessible={true}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(255, 255, 255, 1)",
                  "borderRadius": 2,
                  "cursor": "pointer",
                  "height": 40,
                  "justifyContent": "center",
                  "maxWidth": 240,
                  "minWidth": 120,
                  "overflow": "hidden",
                  "touchAction": "manipulate",
                }
              }
            >
              <div
                className="rn-alignItems-1awozwy rn-borderTopLeftRadius-1iymjk7 rn-borderTopRightRadius-s2skl2 rn-borderBottomRightRadius-l5bh9y rn-borderBottomLeftRadius-101sy47 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-cursor-1loqt21 rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-height-eu3ka rn-justifyContent-1777fci rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-maxWidth-1fnot1l rn-minHeight-ifefl9 rn-minWidth-ggk5by rn-overflowX-11yh6sk rn-overflowY-buy8e9 rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim rn-touchAction-1gvxusu rn-zIndex-1lgpqti"
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "backgroundColor": "rgba(255, 255, 255, 1)",
                  }
                }
                tabIndex="0"
              >
                <Text
                  style={
                    Object {
                      "color": "#48484D",
                      "cursor": "pointer",
                      "touchAction": "manipulation",
                    }
                  }
                >
                  <InnerText
                    style={
                      Object {
                        "0": 41,
                        "1": Object {
                          "color": "#48484D",
                        },
                        "2": undefined,
                      }
                    }
                  >
                    <GetTheme>
                      <Text
                        style={
                          Object {
                            "0": 41,
                            "1": Object {
                              "color": "#48484D",
                            },
                            "2": undefined,
                            "color": "#48484D",
                          }
                        }
                      >
                        <div
                          className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1b43r93 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
                          dir="auto"
                          style={
                            Object {
                              "0": "41px",
                              "1": Object {
                                "color": "#48484D",
                              },
                              "color": "rgba(72,72,77,1)",
                            }
                          }
                        >
                          <Text>
                            <span
                              className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-homxoj rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-poiln3 rn-fontSize-7cikom rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-irrty rn-wordWrap-qvutc0"
                              dir="auto"
                            >
                              hello
                            </span>
                          </Text>
                        </div>
                      </Text>
                    </GetTheme>
                  </InnerText>
                </Text>
              </div>
            </View>
          </AnimatedComponent>
        </TouchableWithoutFeedback>
      </BaseButton>
    </ButtonWithText>
  </GetTheme>
</SecondaryButton>
`;
